    /var/www/index.html on new installs. Also remove the now unneeded
    RedirectMatch line from sites-available/default.
    (Closes: #411774, #458093)
  * Add some information to README.Debian (Apache wiki, default virtual host)
  * Build with LDFLAGS=-Wl,--as-needed to drop a lot of unnecessary
    dependencies, easing library transitions (closes: #458857).
  * Fix some lintian warnings:
    - Pass --no-start to dh_installinit instead of omitting the debhelper token
      in various maintainer scripts. Also move the update-rc.d call to
      apache2.2-common.
    - Add Short-Description to init script.
  * Remove unused apache2-mpm-prefork.prerm from source package and clean up
    debian/rules a bit.

 -- Stefan Fritsch <sf@debian.org>  Sat, 15 Dec 2007 00:16:20 +0100

apache2 (2.2.6-3) unstable; urgency=low

  * Allocate fewer bucket brigades in case of a flush bucket. This might help
    with the memory leaks reported in #399776 and #421557.
  * Escape the HTTP method in error messages to avoid potential cross site
    scripting vulnerabilities (CVE-2007-6203).
  * Update 053_bad_file_descriptor_PR42829.dpatch to avoid a race condition.
  * Redirect /doc/apache2-doc/manual/ to /manual/ in the apache2-doc config
    (Closes: #450867).
  * Add icons for .ogg and .ogm (Closes: #255443).
  * Add comment about how to log X-Forwarded-For (Closes: #425008).
  * Make mod_proxy_balancer not depend on mod_cache.
  * Add Homepage field to debian/control.
  * Add/fix some lintian overrides, fix some warnings.
  * Bump Standards-Version (no changes).

 -- Stefan Fritsch <sf@debian.org>  Fri, 07 Dec 2007 22:38:59 +0100

apache2 (2.2.6-2) unstable; urgency=low

  * Avoid calling apr_pollset_poll() and accept_func() when the listening
    sockets have already been closed on graceful stop or reload. This
    hopefully fixes processes not being killed (closes: #445263, #447164)
    and the "Bad file descriptor: apr_socket_accept: (client socket)"