@@ -1,0 +1,42 @@
+#!/usr/bin/perl -w
+
+use strict;
+use Text::Wrap;
+$Text::Wrap::columns = 70;
+
+open (my $out, ">&=3") or die "could not open FD 3\n";
+
+my $res = `/usr/sbin/apache2 -t 2>&1`;
+my @modules;
+if ($res !~ "Syntax OK") {
+	print $out "Config file syntax check failed.\n";
+	@modules = sort glob("/etc/apache2/mods-enabled/*.load");
+	map { s{^/etc/apache2/mods-enabled/(.*)\.load$}{$1} } @modules;
+	print $out "List of /etc/apache2/mods-enabled/*.load:\n";
+}
+else {
+	@modules = sort `/usr/sbin/apache2 -M 2>&1`;
+	@modules = map { /^ (.*)_module \(shared\)/ ? ($1) : () } @modules;
+	print $out "List of enabled modules from 'apache2 -M':\n";
+}
+if (! scalar @modules) {
+	print $out "Could not determine module list\n";
+}
+else {
+	my $missing;
+	foreach my $m (@modules) {
+		if (-e "/etc/apache2/mods-available/$m.conf" and
+		    ! -e "/etc/apache2/mods-enabled/$m.conf") {
+			$m .= "*";
+			$missing = 1;
+		}
+	}
+
+	print $out wrap("  ", "  ", "@modules\n");
+
+	print $out
+	    wrap("  ", "   ", 
+		"(A * means that the .conf file for that module is not " .
+		"enabled in /etc/apache2/mods-enabled/)\n") 
+	    if $missing;
+}
